Subtext aligned - need to fix the unwanted boxes

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -44,7 +44,6 @@
 
 .flexbox-item-hero-head {
     display: flex;
-    border: solid 10px #f9faf8;
     margin-top: 150px;
     margin-bottom: 15px;
     margin-left: 30px;
@@ -94,6 +93,8 @@
     display: flex;
     width: 200px;
     margin: 10px;
+    margin-left: 30px;
+    margin-right: 30px;
     border: 3px solid blue;
     background-color: white;
     min-height: 200px;
@@ -101,3 +102,12 @@
     border-radius: 25px;
 }
 
+.flexbox-container-image-subtext {
+    display: flex;
+    justify-content: center;
+    justify-content: space-evenly;
+}
+
+.image-descriptor {
+    align-items: flex-start;
+}
